# lore-lingo

./: .editorconfig  .gitattributes  .gitignore  DEVELOPMENT.md  LICENSE  README.md  TAURI_MIGRATION.md  index.html  overlay.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: launch.json
docs/superpowers/plans/: 2026-07-12-dual-window-refactor.md  2026-07-12-window-list.md
docs/superpowers/specs/: 2026-07-12-window-list-design.md
src/: App.vue  OverlayApp.vue  overlay.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppToast.vue  CaptureFrame.vue
src/components/lyric/: LyricBar.vue  LyricBox.vue  LyricControls.vue
src/components/main-panel/: CaptureTarget.vue  LangFlip.vue  MainPanel.vue  SourceRow.vue  TitleBar.vue  Toolbar.vue  TranslateStream.vue  TranslationCard.vue
src/components/settings/: OcrPanel.vue  SettingsDrawer.vue  SubsPanel.vue  TranslatePanel.vue
src/components/ui/: Icon.vue  SelectField.vue  ToggleSwitch.vue
src/composables/: useCaptureSource.ts  useLyricDrag.ts  useLyricMode.ts  useOverlayBridge.ts  useSettings.ts  useSubtitles.ts  useToast.ts  useTranslator.ts
src/icons/: paths.ts
src/styles/: global.css
