[package]
name = "lenslingo"
version = "0.0.0"
description = "LensLingo — 屏幕区域翻译"
authors = []
edition = "2021"

[lib]
name = "lenslingo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lenslingo"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 屏幕截图（macOS / Windows / Linux 均支持）
screenshots = "0.8"
base64 = "0.22"

# 枚举系统应用窗口（跨平台）
xcap = "0.0.14"
